# BetterJSONDeserializer

./: README.md  pyproject.toml  testing.py
jObject/: __init__.py  jObject.py
j_classify/: __init__.py  j_object.py
tests/: __init__.py  test_j_classify.py
